# Weather_Prediction_Multi_Agents

./: Makefile  README.md  requirements.txt
.devcontainer/: devcontainer.json
Web_deployment/: .env  env.txt  requirements.txt  web_application.py
weatherchatbot/: .dockerignore  README.md  pyproject.toml
weatherchatbot/knowledge/: user_preference.txt
weatherchatbot/src/weatherchatbot/: Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit  app.py  crew.py  docker-compose.yml  flow.png.html  flow.py  main.py  requirements.txt  streamlit_app.py  streamlit_requirements.txt  test_api.py  test_streamlit.py  weather_crew.py
weatherchatbot/src/weatherchatbot/Commands/: README.md
weatherchatbot/src/weatherchatbot/config/: agents.yaml  tasks.yaml
weatherchatbot/src/weatherchatbot/tools/: weather_tool.py
weatherchatbot/tests/: test.py  test_api.py
