[project]
name = "weatherchatbot"
version = "0.1.0"
description = "WeatherChatBot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
weatherchatbot = "weatherchatbot.main:run"
run_crew = "weatherchatbot.main:run"
train = "weatherchatbot.main:train"
replay = "weatherchatbot.main:replay"
test = "weatherchatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
